# WiseXpense

./: .gitignore  LICENSE  README.md  compose.yaml  pom.xml  pyproject.toml  requirements.txt  test_backend.sh
backend/: main.py
backend/core/: config.py  database.py  dependencies.py  security.py
backend/models/: base.py
backend/plaid/: router.py
backend/plaid_integration/: client.py  router.py  schemas.py
backend/transactions/: model.py  repository.py  router.py  service.py
backend/users/: model.py  router.py  schemas.py  service.py
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/connect-bank/: page.tsx
client/components/: Dashboard.tsx  Features.tsx  Hero.tsx  Navbar.tsx  PlaidLinkButton.tsx
client/components/ui/: button.tsx
client/context/: AuthContext.tsx
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
wisexpense/: __init__.py  app.py  cli.py
wisexpense/agentic/: agent.py  router.py
wisexpense/analytics/: __init__.py  router.py
wisexpense/core/: config.py  database.py  duckdb_client.py
wisexpense/data_transformations/: dbt_project.yml  profiles.yml
wisexpense/models/: base.py
wisexpense/orchestration/: __init__.py
wisexpense/plaid_integration/: __init__.py  client.py  router.py  schemas.py
wisexpense/simplefin_integration/: __init__.py  client.py  router.py
wisexpense/static/: index.html
wisexpense/transactions/: __init__.py  analytics_service.py  model.py  repository.py  router.py  schemas.py  service.py
(+49 files in other folders)
