[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wisexpense"
version = "0.1.0"
description = "Self-hosted, agentic financial manager. Connect your bank, track spending, get insights."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Noah Nguyen"},
]
keywords = ["finance", "budgeting", "plaid", "self-hosted", "personal-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "plaid-python>=15.0.0",
    "typer[all]>=0.9.0",
    "python-multipart>=0.0.6",
    "duckdb>=0.10.0",
    "dbt-duckdb>=1.7.0",
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "pandas>=2.0.0",
]

[project.scripts]
wisexpense = "wisexpense.cli:app"

[project.urls]
Homepage = "https://github.com/noahnghg/WiseXpense"
Repository = "https://github.com/noahnghg/WiseXpense"

[tool.setuptools.packages.find]
include = ["wisexpense*"]

[tool.setuptools.package-data]
wisexpense = ["static/**/*"]
